# Hare

./: README.md
experiment/: README.md  file_path_freq.py
experiment/client/netCache/client_speedlimit/: Makefile  client.py
experiment/client/netCache/client_speedlimit/include/: util.h
experiment/client/netCache/client_speedlimit/stats/: 50-n1000000_a0.99_r1000000_s1_h2048_z0_w100_e64.txt  50-n1000000_a0.99_r1000000_s1_h32768_z0_w100_e64.txt  K100-45M  K1600-46M  TOP10-ms-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOP4-ms-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOPK100-TURN1-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOPK100-TURN100(2)-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOPK100-TURN50-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOPK5-TURN2000-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt
experiment/client/netCache/client_speedlimit/trace/: genSpecialTxn.run  genTxn_zipf.cpp
experiment/client/netCache/client_speedlimit_w_twitter/: client.c
experiment/client/netCache/client_speedlimit_w_twitter/include/: util.h
experiment/client/netCache/client_speedlimit_w_twitter/stats/: 100-n1000000_a0.99_r1000000_s1_h2048_z0_w100_e64.txt  25-n1000000_a0.99_r1000000_s1_h32768_z0_w100_e64.txt  K400-48M  TOP1-ms-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  (+5 more)
experiment/client/netCache_huawei/client/: client.c
experiment/client/netCache_huawei/client_closeloop/: client.c
experiment/client/netCache_huawei/client_probe/: Makefile  client.c  sendLock.py
experiment/client/netCache_huawei/client_speedlimit_w_twitter/: client.c
experiment/client/netLock/client/: client.c  sendLock.py
experiment/client/netLock_huawei_new/client/: client.c
experiment/p4/p4_prj/P4-KVS-lyt/P4-KVS-DySO-k1v1c5-hitrate/P4/controller/: CMakeLists.txt  config.h  main.cpp  main_4lcore.cpp  main_noscale.cpp  my_header.h  my_spacesaving.h
experiment/p4/p4_prj/P4-KVS-lyt/P4-KVS-cms-hitrate/P4/controller/: CMakeLists.txt  config.h  main.cpp  main_hitrate.cpp  my_header.h
experiment/p4/p4_prj/P4-KVS-lyt/P4DPDK-KVS-k4v4/P4/controller/: CMakeLists.txt  main_bak.cpp
experiment/probe/client_probe_noClientID/: client.c  log.txt  run_master.sh
experiment/probe/client_probe_noClientID/include/: util.h
experiment/probe/client_probe_noClientID/stats/: K1200-47M  K1600-46M  K400  K400-48M  TOP1-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOP10-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOP31-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt
experiment/probe/client_probe_noClientID/trace/: genKV_zipf.cpp
experiment/probe/client_probe_noClientID_w_twitter/: client.c  client_old.c  client_re.py
experiment/probe/client_probe_noClientID_w_twitter/include/: util.h  util_old.h
experiment/probe/client_probe_noClientID_w_twitter/stats/: K100-45M  K1200  TOPK1-TURN10000-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  TOPK10000-TURN1-n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt  n1000000_a0.99_r1000000_s1_h10000_z0_w100_e64.txt
experiment/probe/client_probe_noClientID_w_twitter/trace/: genKV_zipf.run  genTxn.run
experiment/server/server_code_kvs_dyso_speedlimit/: Makefile  client.c
experiment/server/server_code_kvs_dyso_speedlimit/include/: cache_upd_ctrl.h  util.h
experiment/server/server_code_kvs_noturn/KVS_dpdk_server_code_amax7/: Makefile  client.c
experiment/server/server_code_kvs_noturn_testlatency_multiStatThread/KVS_dpdk_server_code_amax7/: Makefile  client.c
experiment/server/server_code_lock_noturn_testlatency/ver_UPD/: Makefile  client.c  lock_queue.c  scapy_test.py  test.c  think_queue.c  txn_queue.c
framework/: README.md
framework/system/switch_dataplane/: CMakeLists.txt  config.p4  framework_main.p4  kvs.p4
framework/user/: config.json
framework/user/backend_server/: generate_w_backbone
framework/user/backend_server/interface/kvs_server/: CMakeLists.txt  main.cpp  user.h
framework/user/switch_data_plane/: generate_w_backbone  kvs.p4
framework/user/switch_data_plane/interface/: interface.p4
system/server_lib/include/: general_server.h
system/switch_dataplane/: precise_counter.p4
test/: README.md
test/client/netCache_huawei/client_speedlimit/: client.c  start_switch.py
test/framework/: README.md
test/framework/user/backend_server/results/server_lib/src/: CMakeLists.txt  stats_server.cpp
test/p4/p4_prj/P4-dp_resource/P4DPDK-KVS-noturn-latency/P4/controller/include/: CMakeLists.txt  p4_table.h
test/server/server_code_kvs_noturn_testlatency/KVS_dpdk_server_code_amax7/: client.c
user/: config.json
user/backend_server/: framework_main.cpp  kvs.hpp
user/switch_data_plane/: framework_main.p4  header.p4  kvs.p4  parser.p4  types.p4
(+282 files in other folders)
